# art-conf

./: Makefile  README.md  mypy.ini  pyproject.toml
art_conf/: art_conf.py
tests/: test_art_conf.py
