[tool.poetry]
name = "art-conf"
version = "1.0.0"
description = "Configure Artifactory with pip and npm"
authors = []
license = "MIT"
readme = "README.md"
homepage = "https://github.com/christianlent/art-conf"
repository = "https://github.com/christianlent/art-conf"
keywords = ["Artifactory", "pip", "npm", "python", "pypi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
packages = [
    { include = "art_conf" },
    { include = "art_conf/py.typed" },
]

[tool.poetry.dependencies]
python = ">= 3.6, <= 3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pytest = "^6.0.2"
pytest-cov = "^2.11.1"

[tool.black]
line-length = 88
target-version = ["py37"]
exclude = "^/(stubs|care_gaps/ui)/"

[tool.isort]
profile = "black"